fix: nav logo, pagination wrap

--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -16,7 +16,7 @@ body.menu-open {
 }
 
 .navbar-brand {
-  @apply text-xl font-semibold text-dark;
+  @apply hidden text-xl font-semibold text-dark sm:block;
   image {
     @apply max-h-full max-w-full;
   }
